2006-02-09  Stipe Tolj  <stolj at kannel.org>
  * gw/wapbox.c: fixing bug #305, where wapbox did not react on SIGTERM. 
    Now SIGINT and SIGTERM will cause wapbox to shutdown.
    
2006-02-09  Stipe Tolj  <stolj at kannel.org>
  * wap/cookies.c: fixing bug #304, which caused segfault via octstr_append()
    called from set_cookies(), which should be a race-condition. Now the 
    cookies list is protected via a permanent lock before we either cycle in
    the list or delete/append items. Thanks to Mindaugas for reporting.

2006-02-07  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_smpp.c: fixed typo deliver_sm -> data_sm.
    Thanks to Stipe for pointing to this.

2006-02-04  Stipe Tolj  <stolj at kannel.org>
  * gw/pushkannel.conf: remove trailing newlines. NLC.
  
2006-02-04  Stipe Tolj  <stolj at kannel.org>
  * gw/ota_compiler.c: fixed OMA compilation, due to mis-ordered array of 
    parameter attributes which caused all attributes to be inlined.
    Thanks to Tomas Varaneckas <tomas.varaneckas@metasite.net> for report.
    [Msg-Id: <43E071A8.40302@metasite.net>]

2006-01-29  Alexander Malysh <amalysh at kannel.org>
  * doc/userguide/userguide.xml, gw/smsc/smsc_smpp.c, gwlib/cfg.def: applied
    patch from Peter Christensen that adds new config option 'alt-addr-charset'
    which make it possible to define charset for the alphanumeric source address.
    Patch was modified by me to match Kannel coding style.
    [Msg-Id: <43D0C806.2020907@coolsystems.dk>]

2006-01-19  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_smpp.c: fixed bug that SMSCConn status was not set to DEAD when
    io_thread terminates.
    Thanks to Peter Christensen for pointing to this and partially patch.

2006-01-13  Stipe Tolj  <stolj at kannel.org>
  * configure[.in]: reverting changes from Andreas in rev 1.154 for setting
    both (i386 and ppc) architecture flags for darwin (MacOS X). This causes